# libspnav

./: .gitignore  CMakeLists.txt  spacenav.pc.in
include/: proto.h  spnav.h  spnav_magellan.h
